@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.6.12"
+#define KPPPVERSION "1.6.13"
 #endif
