@@ -1,3 +1,7 @@
+1999-06-10  Harri Porten  <porten@kde.org>
+
+	* modem.cpp: fixed check for stale lock file
+
 1999-04-30  Harri Porten  <porten@kde.org>
 
 	* conwindow.cpp: fixed deleting of old geometry layout
